feat: use env variable for server domain in apache config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -80,7 +80,8 @@ services:
       MONGO_CREDENTIALS: ${MONGO_INITDB_USERNAME}:${MONGO_INITDB_PASSWORD}
       MONGO_SERVER: ${MONGO_SERVER}
       MONGO_MAIN_DB: ${MONGO_MAIN_DB}
-      SERVER_NAME: ${FQDN_HOST}:${FRONTEND_PORT}
+      SERVER_DOMAIN: ${FQDN_HOST}
+      SERVER_PORT: ${FRONTEND_PORT}
       VAULT_ADDR: ${VAULT_ADDR}
       VAULT_API_VERSION: ${VAULT_API_VERSION}
     volumes:
