--- a/front_end/openVRE/apache/server.conf
+++ b/front_end/openVRE/apache/server.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-    ServerName localhost
+    ServerName ${SERVER_DOMAIN}
     DocumentRoot /var/www/html/openVRE/public/
     DirectoryIndex index.php
 
