--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -80,10 +80,13 @@ services:
       MONGO_CREDENTIALS: ${MONGO_INITDB_USERNAME}:${MONGO_INITDB_PASSWORD}
       MONGO_SERVER: ${MONGO_SERVER}
       MONGO_MAIN_DB: ${MONGO_MAIN_DB}
+      MONGO_SERVER: ${MONGO_SERVER}
       SERVER_DOMAIN: ${FQDN_HOST}
       SERVER_PORT: ${FRONTEND_PORT}
       VAULT_ADDR: ${VAULT_ADDR}
       VAULT_API_VERSION: ${VAULT_API_VERSION}
+      VAULT_ROLENAME: ${VAULT_ROLENAME}
+      VAULT_SECRET_PATH: ${VAULT_SECRET_PATH}
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./front_end/openVRE/public/:/var/www/html/openVRE/public
