feat: set up keycloak sample realm and import at start

--- a/.env.sample
+++ b/.env.sample
@@ -9,13 +9,16 @@ NETWORK_NAME=open-vre-network
 # KEYCLOAK CONFIGURATION
 # Authentication and user managment settings for Keycloak
 KEYCLOAK_SERVER=http://172.21.0.12:8080
-KEYCLOAK_REALM=open-vre
+KEYCLOAK_REALM=project
 KEYCLOAK_CLIENT=open-vre
-KEYCLOAK_SECRET=01234-secret
+KEYCLOAK_SECRET=01234secretxxxxxxxxxxxxxxxxxxxxx
 # Only required for local deployment
 KEYCLOAK_ADMIN_USER=admin
 KEYCLOAK_ADMIN_PASSWORD=pass
 KEYCLOAK_PORT=9099
+KEYCLOAK_REALMS_DIR=./keycloak/realms
+# Internal path (do not change)
+KEYCLOAK_IMPORT_DIR=/opt/keycloak/data/import
 
 # MONGODB CONFIGURATION
 # Database settings for MongoDB
