feat: add keycloak DB env variables

--- a/.env.sample
+++ b/.env.sample
@@ -11,12 +11,6 @@ NETWORK_NAME=open-vre-network
 POSTGRES_PASSWORD=password
 POSTGRES_USER=keycloak
 POSTGRES_DB=keycloak
-DB_VENDOR=POSTGRES
-DB_ADDR=postgres
-DB_DATABASE=keycloak
-DB_USER=keycloak
-DB_SCHEMA=public
-DB_PASSWORD=password
 
 # KEYCLOAK CONFIGURATION
 # Authentication and user managment settings for Keycloak
@@ -24,6 +18,13 @@ KEYCLOAK_SERVER=https://keycloak:8080/auth
 KEYCLOAK_REALM=project
 KEYCLOAK_CLIENT=open-vre
 KEYCLOAK_SECRET=01234secretxxxxxxxxxxxxxxxxxxxxx
+# Only required for deployment with persistent storage
+KEYCLOAK_DB_HOST=postgres
+KEYCLOAK_DB_NAME=keycloak
+KEYCLOAK_DB_PASSWORD=password
+KEYCLOAK_DB_SCHEMA=public
+KEYCLOAK_DB_USER=keycloak
+KEYCLOAK_DB_VENDOR=postgres
 # Only required for local deployment
 KEYCLOAK_ADMIN_USER=admin
 KEYCLOAK_ADMIN_PASSWORD=pass
