fix: remove port from keycloak server

--- a/.env.sample
+++ b/.env.sample
@@ -14,7 +14,7 @@ POSTGRES_DB=keycloak
 
 # KEYCLOAK CONFIGURATION
 # Authentication and user managment settings for Keycloak
-KEYCLOAK_SERVER=https://keycloak:8080/auth
+KEYCLOAK_SERVER=https://keycloak.com/auth
 KEYCLOAK_REALM=project
 KEYCLOAK_CLIENT=open-vre
 KEYCLOAK_SECRET=01234secretxxxxxxxxxxxxxxxxxxxxx
