chore: add text to comment

--- a/.env.sample
+++ b/.env.sample
@@ -18,19 +18,19 @@ KEYCLOAK_SERVER=https://keycloak.com/auth
 KEYCLOAK_REALM=project
 KEYCLOAK_CLIENT=open-vre
 KEYCLOAK_SECRET=01234secretxxxxxxxxxxxxxxxxxxxxx
-# Only required for deployment with persistent storage
-KEYCLOAK_DB_HOST=postgres
-KEYCLOAK_DB_NAME=keycloak
-KEYCLOAK_DB_PASSWORD=password
-KEYCLOAK_DB_SCHEMA=public
-KEYCLOAK_DB_USER=keycloak
-KEYCLOAK_DB_VENDOR=postgres
 # Only required for local deployment
 KEYCLOAK_ADMIN_USER=admin
 KEYCLOAK_ADMIN_PASSWORD=pass
 KEYCLOAK_PORT=9099
 KEYCLOAK_DB_VOLUME=keycloak_data
 KEYCLOAK_REALMS_DIR=./keycloak/realms
+# Only required for local deployment with persistent storage
+KEYCLOAK_DB_HOST=postgres
+KEYCLOAK_DB_NAME=keycloak
+KEYCLOAK_DB_PASSWORD=password
+KEYCLOAK_DB_SCHEMA=public
+KEYCLOAK_DB_USER=keycloak
+KEYCLOAK_DB_VENDOR=postgres
 # Internal path (do not change)
 KEYCLOAK_IMPORT_DIR=/opt/keycloak/data/import
 
