feat: keycloak config with reverse proxy
Also include commented case with certs and no proxy

--- a/.env.sample
+++ b/.env.sample
@@ -18,6 +18,7 @@ KEYCLOAK_SERVER=https://keycloak.com/auth
 KEYCLOAK_REALM=project
 KEYCLOAK_CLIENT=open-vre
 KEYCLOAK_SECRET=01234secretxxxxxxxxxxxxxxxxxxxxx
+KC_HTTP_ENABLED=true # set to false with https passthrough or no proxy
 # Only required for local deployment
 KEYCLOAK_ADMIN_USER=admin
 KEYCLOAK_ADMIN_PASSWORD=pass
@@ -33,6 +34,12 @@ KEYCLOAK_DB_USER=keycloak
 KEYCLOAK_DB_VENDOR=postgres
 # Internal path (do not change)
 KEYCLOAK_IMPORT_DIR=/opt/keycloak/data/import
+# Certificate paths
+KEYCLOAK_SSL_PEM=./keycloak/ssl/keycloak.pem
+KEYCLOAK_SSL_KEY=./keycloak/ssl/keycloak.key
+# Internal certificate paths (do not change)
+KEYCLOAK_CERT_PEM=/etc/ssl/certs/keycloak.pem
+KEYCLOAK_CERT_KEY=/etc/ssl/certs/keycloak.key
 
 # MONGODB CONFIGURATION
 # Database settings for MongoDB
