--- a/front_end/openVRE/apache/server.conf
+++ b/front_end/openVRE/apache/server.conf
@@ -17,6 +17,9 @@
         Require all granted
     </Directory>
 
+    ProxyPass         "/auth" "http://keycloak:8080"
+    ProxyPassReverse  "/auth" "http://keycloak:8080"
+
     RewriteEngine on
     RewriteRule ^/interactive-tool/([^/]+)/?(.*) https://$1:8090/$2 [P,L]
 
