--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,12 +77,18 @@ services:
       KC_DB_URL_HOST: ${KEYCLOAK_DB_HOST}
       KC_DB_USERNAME: ${KEYCLOAK_DB_USER}
       KC_HOSTNAME: ${KEYCLOAK_SERVER}
+      KC_HTTP_ENABLED: ${KC_HTTP_ENABLED}
+      # KC_HTTPS_CERTIFICATE_FILE: ${KEYCLOAK_CERT_PEM}
+      # KC_HTTPS_CERTIFICATE_KEY_FILE: ${KEYCLOAK_CERT_KEY}
+      KC_PROXY_HEADERS: xforwarded
       KEYCLOAK_SECRET: ${KEYCLOAK_SECRET}
     volumes:
       - ${KEYCLOAK_REALMS_DIR}:${KEYCLOAK_IMPORT_DIR}:ro
+      # - ${KEYCLOAK_SSL_PEM}:${KEYCLOAK_CERT_PEM}
+      # - ${KEYCLOAK_SSL_KEY}:${KEYCLOAK_CERT_KEY}
     command: ["start", "--import-realm"]
     ports:
-      - ${KEYCLOAK_PORT}:8080
+      - ${KEYCLOAK_PORT}:8080 # 8443
     networks:
       net_vre:
         ipv4_address: 172.21.0.12
@@ -185,8 +191,8 @@ networks:
   net_vre:
     name: ${NETWORK_NAME}
     # Use this driver_opts on openStack cloud
-    #driver_opts:
-    #com.docker.network.driver.mtu: 1442
+    driver_opts:
+      com.docker.network.driver.mtu: 1440
     ipam:
       config:
         - subnet: 172.21.0.0/24
