refactor: rename variable

--- a/.env.sample
+++ b/.env.sample
@@ -18,7 +18,7 @@ KEYCLOAK_SERVER=https://keycloak.com/auth
 KEYCLOAK_REALM=project
 KEYCLOAK_CLIENT=open-vre
 KEYCLOAK_SECRET=01234secretxxxxxxxxxxxxxxxxxxxxx
-KC_HTTP_ENABLED=true # set to false with https passthrough or no proxy
+KEYCLOAK_HTTP_ENABLED=true # set to false with https passthrough or no proxy
 # Only required for local deployment
 KEYCLOAK_ADMIN_USER=admin
 KEYCLOAK_ADMIN_PASSWORD=pass
