--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,7 +77,7 @@ services:
       KC_DB_URL_HOST: ${KEYCLOAK_DB_HOST}
       KC_DB_USERNAME: ${KEYCLOAK_DB_USER}
       KC_HOSTNAME: ${KEYCLOAK_SERVER}
-      KC_HTTP_ENABLED: ${KC_HTTP_ENABLED}
+      KC_HTTP_ENABLED: ${KEYCLOAK_HTTP_ENABLED}
       # KC_HTTPS_CERTIFICATE_FILE: ${KEYCLOAK_CERT_PEM}
       # KC_HTTPS_CERTIFICATE_KEY_FILE: ${KEYCLOAK_CERT_KEY}
       KC_PROXY_HEADERS: xforwarded
