feat: set up no TLS by default for mongo

--- a/.env.sample
+++ b/.env.sample
@@ -47,6 +47,7 @@ MONGO_SERVER=my-mongodb:27017
 MONGO_MAIN_DB=openVRE
 MONGO_INITDB_USERNAME=user
 MONGO_INITDB_PASSWORD=user
+MONGO_TLS_MODE=disabled # to enable use 'requireTLS'
 # Only required for local deployment
 MONGO_INITDB_ROOT_USERNAME=admin
 MONGO_INITDB_ROOT_PASSWORD=admin
