refactor: move host path variable to env file

--- a/.env.sample
+++ b/.env.sample
@@ -90,6 +90,7 @@ DOCKER_GROUP=455
 # Front-end application settings
 FRONTEND_PORT=8088
 FRONTEND_HOSTNAME=front_end
+FRONTEND_HOST_PATH=/home/openVRE
 # Certificate paths
 FRONTEND_SSL_PEM=./front_end/openVRE/ssl/openVRE.pem
 FRONTEND_SSL_KEY=./front_end/openVRE/ssl/openVRE.key
