fix: add missing docker env variable FRONTEND_HOST_PATH

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -107,6 +107,7 @@ services:
     environment:
       FRONTEND_CERT_PEM: ${FRONTEND_CERT_PEM}
       FRONTEND_CERT_KEY: ${FRONTEND_CERT_KEY}
+      FRONTEND_HOST_PATH: ${FRONTEND_HOST_PATH}
       KEYCLOAK_CLIENT: ${KEYCLOAK_CLIENT}
       KEYCLOAK_REALM: ${KEYCLOAK_REALM}
       KEYCLOAK_SECRET: ${KEYCLOAK_SECRET}
